# docker-compose_libRadtran

./: README.md  docker-compose.yaml
ubuntu20/: Dockerfile  entrypoint.sh
ubuntu20/projects/: build.sh
ubuntu20/projects/libRadtran-2.0.4/: ._configure  Makeconf.in  Makefile.in  configure  configure.in
ubuntu20/projects/libRadtran-2.0.4/PaxHeader/: configure
ubuntu20/projects/libRadtran-2.0.4/data/solar_flux/: ._atlas_plus_modtran
ubuntu20/projects/libRadtran-2.0.4/data/solar_flux/PaxHeader/: atlas_plus_modtran
ubuntu20/projects/libRadtran-2.0.4/doc/: ._intro.tex  ._libRadtran.tex  ._literature.bib  ._title.tex  intro.tex  literature.bib  title.tex
ubuntu20/projects/libRadtran-2.0.4/doc/PaxHeader/: intro.tex  libRadtran.tex  literature.bib  title.tex
ubuntu20/projects/libRadtran-2.0.4/examples/: ._UVSPEC_MC_SPECTRAL.INP  ._UVSPEC_SIMPLE.INP  ._UVSPEC_TWOMAXRND.INP  ._UVSPEC_TWOSTREBE.INP  ._WC.001.mie  Makefile.in  UVSPEC_MC_AERIS_EDN.INP  UVSPEC_MC_AERIS_EDN.OUT  UVSPEC_MC_EARTHSHINE.INP  UVSPEC_MC_JACOBIAN_EDN.INP  UVSPEC_MC_JACOBIAN_NOVROOM.INP  UVSPEC_MC_JACOBIAN_VROOM.INP
ubuntu20/projects/libRadtran-2.0.4/examples/PaxHeader/: UVSPEC_MC_SPECTRAL.INP  UVSPEC_SIMPLE.INP  UVSPEC_TWOMAXRND.INP  UVSPEC_TWOSTREBE.INP  WC.001.mie
ubuntu20/projects/libRadtran-2.0.4/examples/triangular_srfc/: 02_gen_flat_surface.py  Makefile.in
ubuntu20/projects/libRadtran-2.0.4/examples/triangular_srfc/forward_flat_surface/: Makefile.in
ubuntu20/projects/libRadtran-2.0.4/examples/triangular_srfc/pano_flat_surface_solar/: Makefile.in
ubuntu20/projects/libRadtran-2.0.4/examples/triangular_srfc/pano_flat_surface_thermal/: Makefile.in
ubuntu20/projects/libRadtran-2.0.4/libsrc_c/: ._Corefinder.c  ._LinArray.c  ._Makefile.in  ._Stack.c  ._alis.c  ._allocnd.c  ._ambralsfor.c  ._ascii.c  ._bandec.c  ._c_tzs.c  ._cdisort.c  ._cnv.c  ._common_math.c  ._disotest.c  ._dynamic_tenstream.c  ._equation.c  ._errors.c  ._fortran_and_c.c  ._function.c  ._integrat.c  ._linear.c  ._miecalc.c  ._mystic.c  ._nca.c  ._triangle_surface.c  ._tribox3.c  ._wavelength.c  ._wcloud3d.c  ._yang56.c  .depend  Corefinder.c  Corefinder.h  GLmystic.h  LinArray.c  LinArray.h  Makefile.in  Stack.c  Stack.h  alis.c  alis.h  (+98 more)
ubuntu20/projects/libRadtran-2.0.4/libsrc_c/PaxHeader/: Corefinder.c  LinArray.c  Makefile.in  Stack.c  alis.c  allocnd.c  ambralsfor.c  ascii.c  bandec.c  c_tzs.c  cdisort.c  cnv.c  common_math.c  disotest.c  dynamic_tenstream.c  equation.c  errors.c  fortran_and_c.c  function.c  integrat.c  linear.c  miecalc.c  mystic.c  nca.c  triangle_surface.c  tribox3.c  wavelength.c  wcloud3d.c  yang56.c
ubuntu20/projects/libRadtran-2.0.4/libsrc_f/: ._REFWAT.f  ._cplkavg.f  ._twostr.f  avhrr_kratz.h  dpsdisort.f  f77-uscore.h  ocean.shadow.f  radmat.f  solver.h  spsdisort.f
ubuntu20/projects/libRadtran-2.0.4/libsrc_f/PaxHeader/: REFWAT.f  cplkavg.f  twostr.f
ubuntu20/projects/libRadtran-2.0.4/m4/: ax_lib_netcdf4.m4  ax_prog_cc_mpi.m4
ubuntu20/projects/libRadtran-2.0.4/src/: ._addlevel  ._albedo.c  ._ancillary.c  ._atmosphere.c  ._cloud.c  ._elevation2d.c  ._make_slitfunction.c  ._mie_lex.l  ._sbtaugas.param  ._sofi.c  ._solve_rte.c  ._sza.c  ._uvspec.c  ._uvspec_lex.c  ._uvspec_lex.l  .depend  Makefile.in  UVTools.pm  addlevel  addlevel.c  aerosol.c  aerosol.h  albedo.c  albedo.h  ancillary.c  ancillary.h  angres.c  atmosphere.c  atmosphere.h  ck.c  ck.h  ckdfu.c  ckdfu.h  cldprp.c  cloud.c  cloud.h  cloud3d.c  cloud3d.h  conv.c  elevation2d.c  (+46 more)
ubuntu20/projects/libRadtran-2.0.4/src/PaxHeader/: addlevel  albedo.c  ancillary.c  atmosphere.c  cloud.c  elevation2d.c  make_slitfunction.c  mie_lex.l  sbtaugas.param  sofi.c  solve_rte.c  sza.c  uvspec.c  uvspec_lex.c  uvspec_lex.l
ubuntu20/projects/libRadtran-2.0.4/src_py/: ._general_atmosphere_options.py  ._lex_starter.l  ._output_options.py  ._solver_options.py  ._translate.py  aerosol_options.py  cloud_options.py  general_atmosphere_options.py  geometry_options.py  lex_starter.l  mc_options.py  molecular_options.py  option_definition.py  output_options.py  profile_options.py  solver_options.py  special_options.py  spectral_options.py  surface_options.py  uvspec_lex.l
ubuntu20/projects/libRadtran-2.0.4/src_py/PaxHeader/: general_atmosphere_options.py  lex_starter.l  output_options.py  solver_options.py  translate.py
ubuntu20/projects/libRadtran-2.0.4/test/: Makefile.in  run_optical_properties_test.sh.in  test.pl.in
ubuntu20/projects/libRadtran-2.0.4/unittests/: ._Makefile.in  Makefile.in
ubuntu20/projects/libRadtran-2.0.4/unittests/PaxHeader/: Makefile.in
